[tool.poetry]
name = "distributed-simulation"
version = "0.1.0"
description = ""
authors = ["ziegnes <ziegnes@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipynb = "^0.5.1"
simpy = "^4.1.1"
mesa = "^2.2.4"
seaborn = "^0.13.2"
networkx = "^3.2.1"
usim = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
